--- a/projects/ngx-serial/package.json
+++ b/projects/ngx-serial/package.json
@@ -1,11 +1,30 @@
 {
   "name": "ngx-serial",
-  "version": "0.0.6",
+  "version": "0.0.12",
   "peerDependencies": {
     "@angular/common": "^12.0.5",
     "@angular/core": "^12.0.5"
   },
   "dependencies": {
     "tslib": "^2.1.0"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/archocron/ngx-serial"
+  },
+  "keywords": [
+    "serial",
+    "rs232",
+    "angular",
+    "arduino",
+    "PLC",
+    "browser",
+    "smart card reader"
+  ],
+  "author": {
+    "email": "archocron@gmail.com",
+    "name": "Alejandro Rioja",
+    "url": "https://github.com/archocron"
   }
 }
